# clusterpilot

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  clusterpilot-dashboard.jsx  clusterpilot-tui.jsx  clusterpilot.code-workspace  hpc-app-flow.jsx  netlify.toml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
api/: .env.example  fly.toml  requirements.txt
api/alembic/: env.py
api/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
clusterpilot/: __init__.py  __main__.py  config.py  db.py  update.py
clusterpilot/cluster/: __init__.py  probe.py  slurm.py
clusterpilot/jobs/: __init__.py  ai_gen.py  daemon.py  env_detect.py  fieldnotes.py  preflight.py  sync.py
clusterpilot/notify/: __init__.py  ntfy.py
clusterpilot/ssh/: __init__.py  connection.py  rsync.py
clusterpilot/tui/: __init__.py  app.py  config_view.py  jobs.py  submit.py
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  index.css  main.jsx
frontend/: LandingPage.jsx  index.html  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: generate-featured-image.mjs  postbuild.mjs  (+2 more)
proxy/: fly.toml  main.py  manage_tokens.py
recipe/: meta.yaml
site/: index.html
tests/: test_ai_gen.py  test_config.py  test_daemon_fieldnotes.py  test_db.py  test_env_detect.py  test_fieldnotes.py  test_format_script.py  test_ntfy.py  test_preflight.py  test_probe.py  test_slurm.py  test_ssh.py  test_sync.py  test_upload.py
(+30 files in other folders)
