[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clusterpilot"
version = "0.1.1"
description = "AI-assisted HPC workflow manager for SLURM clusters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Julia Frank" }]
requires-python = ">=3.9"
keywords = ["hpc", "slurm", "tui", "ai", "ssh", "compute-canada", "textual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Shells",
]
dependencies = [
    "textual>=0.85",
    "anthropic>=0.52",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
clusterpilot = "clusterpilot.__main__:main"

[project.urls]
Repository = "https://github.com/ju-pixel/clusterpilot"
Issues = "https://github.com/ju-pixel/clusterpilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["clusterpilot"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
